<resources>
    <string name="app_name">SLSPracticalTest</string>
    <string name="lbl_best_furniture">Best Furniture</string>
    <string name="lbl_perfect_choice">Perfect Choice!!</string>
    <string name="hint_search">Search</string>
    <string name="hint_filter">filter</string>
    <string name="lbl_buy">Buy</string>
    <string name="hint_back">Back</string>
    <string name="no_data">No Data Available !</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="lbl_default_amount">$0.00</string>
    <string name="lbl_total_quantity">Qty</string>
    <string name="lbl_default_qty">0</string>
    <string name="lbl_checkout">Checkout</string>
    <string name="lbl_invoice">Invoice</string>
    <string name="no_data_in_cart">Your Cart is Empty!!</string>
    <string name="lbl_discount_type">Discount Type</string>
    <string name="lbl_fixed">Fixed</string>
    <string name="lbl_percentage">Percentage</string>
    <string name="lbl_discount_amount">Discount Amount</string>
    <string name="lbl_received_amount">Received Amount</string>
    <string name="lbl_payable">Payable</string>
    <string name="lbl_remaining">Remaining</string>
    <string name="lbl_change">Change</string>
    <string name="lbl_generate_invoice">Generate Invoice</string>
    <string name="err_msg_discount">Discount amount can\'nt more than total amount</string>
    <string name="err_msg_received">Received amount not less than total amount</string>
    <string name="err_msg_received_required">Received amount is required</string>
    <string name="err_msg_discount_not_more">Discount not more than 99%</string>
    <string name="lbl_my_shop_name">My Shop Name</string>
    <string name="lbl_my_shop_address">04–12\nAnand\nIndia</string>
    <string name="lbl_sales_receipt">Sales Receipt</string>
    <string name="lbl_invoice_number">Invoice Number : %s</string>
    <string name="lbl_date">Date: %s</string>
    <string name="lbl_divider">---------------------------------------------------------------------------------------------------------------------------------------------------------</string>
    <string name="lbl_item_name">Item</string>
    <string name="lbl_price">Price</string>
    <string name="lbl_quantity">Qty</string>
    <string name="lbl_total">Total</string>
    <string name="lbl_total_str">Total: %s</string>
    <string name="lbl_total_discount">Discount: -%s</string>
    <string name="lbl_total_number_of_item">Number of item sold: %s</string>
    <string name="lbl_sub_total_str">Subtotal: %s</string>
    <string name="lbl_change_str">Change: %s</string>
</resources>